@@ -32,18 +32,18 @@ $versions['AUTHORS']='11306';
 $versions['ChangeLog']='';
 $versions['LICENSE.txt']='11584';
 $versions['README']='3848';
-$versions['Version.php']='17967';
+$versions['Version.php']='18002';
 $versions['add_comment.php']='17806';
-$versions['add_photos.php']='17812';
+$versions['add_photos.php']='18002';
 $versions['add_photos_frame.php']='17808';
 $versions['add_photos_refresh.php']='17808';
 $versions['admin-page.php']='17869';
 $versions['administer_startpage.php']='17812';
 $versions['album_permissions.php']='17902';
-$versions['albums.php']='17964';
+$versions['albums.php']='17995';
 $versions['block-random.php']='17827';
 $versions['captionator.php']='17806';
-$versions['classes/Album.php']='17958';
+$versions['classes/Album.php']='17993';
 $versions['classes/AlbumDB.php']='17811';
 $versions['classes/AlbumItem.php']='17959';
 $versions['classes/Colors.php']='17840';
@@ -92,7 +92,7 @@ $versions['contrib/GeekLog/ChangeLog']='';
 $versions['contrib/joomla/HowTo.txt']='16440';
 $versions['contrib/joomla/admin.gallery.html.php']='17808';
 $versions['contrib/joomla/admin.gallery.php']='17808';
-$versions['contrib/joomla/classes/mambo.php']='17204';
+$versions['contrib/joomla/classes/mambo.php']='18002';
 $versions['contrib/joomla/gallery.php']='17808';
 $versions['contrib/joomla/gallery.xml']='17808';
 $versions['contrib/joomla/images/logo-228x67.png']='';
@@ -101,7 +101,7 @@ $versions['contrib/joomla/toolbar.gallery.php']='17806';
 $versions['contrib/mambo/HowTo.txt']='16440';
 $versions['contrib/mambo/admin.gallery.html.php']='17808';
 $versions['contrib/mambo/admin.gallery.php']='17808';
-$versions['contrib/mambo/classes/mambo.php']='17204';
+$versions['contrib/mambo/classes/mambo.php']='18002';
 $versions['contrib/mambo/gallery.php']='17808';
 $versions['contrib/mambo/gallery.xml']='17808';
 $versions['contrib/mambo/images/logo-228x67.png']='';
@@ -137,8 +137,8 @@ $versions['edit_field.php']='17806';
 $versions['edit_thumb.php']='17806';
 $versions['edit_watermark.php']='17796';
 $versions['extra_fields.php']='17808';
-$versions['gallery_remote.php']='17796';
-$versions['gallery_remote2.php']='17796';
+$versions['gallery_remote.php']='18002';
+$versions['gallery_remote2.php']='18002';
 $versions['help/blacklist.txt']='14533';
 $versions['help/imagemap.php']='17824';
 $versions['help/metadataOnUpload.php']='17824';
@@ -314,7 +314,7 @@ $versions['html_wrap/photo.header.default']='17851';
 $versions['html_wrap/popup.footer.default']='17810';
 $versions['html_wrap/slideshow.footer.default']='17851';
 $versions['html_wrap/slideshow.header.default']='17851';
-$versions['html_wrap/stats.header.default']='';
+$versions['html_wrap/stats.header.default']='17899';
 $versions['html_wrap/wrapper.footer.default']='17853';
 $versions['html_wrap/wrapper.header.default']='17853';
 $versions['imagemap.php']='17959';
@@ -504,7 +504,7 @@ $versions['js/jopen.js']='16783';
 $versions['js/moorainbow/mooRainbow.js.php']='16779';
 $versions['js/moorainbow/mootools.v1.11.js']='16779';
 $versions['js/multifile.js.php']='17822';
-$versions['js/number_conversions.js']='';
+$versions['js/number_conversions.js']='17822';
 $versions['js/passwordStrengthMeter.js']='13850';
 $versions['js/progressbar.js']='16551';
 $versions['js/rgbcolor.js']='13850';
@@ -523,7 +523,7 @@ $versions['js/wz/tip_balloon/stemb.gif']='';
 $versions['js/wz/tip_balloon/stemt.gif']='';
 $versions['js/wz/tip_balloon/t.gif']='';
 $versions['js/wz/wz_jsgraphics.js']='17298';
-$versions['js/wz/wz_tooltip.js']='';
+$versions['js/wz/wz_tooltip.js']='17298';
 $versions['layout/adminbox.inc']='17848';
 $versions['layout/breadcrumb.inc']='17848';
 $versions['layout/commentbox.inc']='17848';
@@ -538,19 +538,19 @@ $versions['layout/navtableend.inc']='6352';
 $versions['layout/navtablemiddle.inc']='6352';
 $versions['layout/searchdraw.inc']='17848';
 $versions['layout/watermarkform.inc']='17819';
-$versions['lib/album.php']='17965';
-$versions['lib/albumItem.php']='17900';
+$versions['lib/album.php']='17982';
+$versions['lib/albumItem.php']='18002';
 $versions['lib/content.php']='17964';
 $versions['lib/filesystem.php']='17882';
 $versions['lib/filetypes.php']='16662';
 $versions['lib/form.php']='17898';
-$versions['lib/imageManipulation.php']='17819';
-$versions['lib/lang.php']='17944';
+$versions['lib/imageManipulation.php']='17985';
+$versions['lib/lang.php']='17982';
 $versions['lib/mail.php']='17900';
 $versions['lib/messages.php']='17900';
 $versions['lib/popup.php']='17900';
 $versions['lib/progressbar.php']='17321';
-$versions['lib/setup.php']='17931';
+$versions['lib/setup.php']='17982';
 $versions['lib/stats.php']='15842';
 $versions['lib/text.php']='16777';
 $versions['lib/url.php']='17853';
@@ -559,7 +559,7 @@ $versions['lib/valchecks.php']='17900';
 $versions['lib/voting.php']='17945';
 $versions['login.php']='17837';
 $versions['manage_users.php']='17822';
-$versions['manifest.inc']='17948';
+$versions['manifest.inc']='17801';
 $versions['modify_user.php']='17811';
 $versions['move_album.php']='17806';
 $versions['move_photo.php']='17963';
@@ -568,7 +568,7 @@ $versions['new_password.php']='17898';
 $versions['nls.php']='17808';
 $versions['photo_owner.php']='17806';
 $versions['platform/fs_unix.php']='17823';
-$versions['platform/fs_win32.php']='17823';
+$versions['platform/fs_win32.php']='17985';
 $versions['poll_properties.php']='17812';
 $versions['poll_results.php']='17840';
 $versions['progress_uploading.php']='17808';
@@ -586,7 +586,7 @@ $versions['rss.php']='17825';
 $versions['save_photos.php']='17796';
 $versions['search.php']='17812';
 $versions['secure.sh']='6294';
-$versions['session.php']='17806';
+$versions['session.php']='18002';
 $versions['setup/check.inc']='17801';
 $versions['setup/check_imagemagick.php']='17801';
 $versions['setup/check_mail.php']='17801';
@@ -807,7 +807,7 @@ $versions['skins/yellow/images/mod_titlebar.jpg']='';
 $versions['skins/yellow/images/mod_titlemid.jpg']='';
 $versions['skins/yellow/images/screenshot.jpg']='';
 $versions['skins/yellow/style.def']='15408';
-$versions['slideshow.php']='17819';
+$versions['slideshow.php']='18002';
 $versions['sort_album.php']='17806';
 $versions['stamp_preview.php']='17808';
 $versions['stats-wizard.php']='17899';
@@ -815,7 +815,7 @@ $versions['stats.php']='17899';
 $versions['upgrade_album.php']='17816';
 $versions['upgrade_users.php']='17808';
 $versions['user_preferences.php']='17807';
-$versions['util.php']='17941';
+$versions['util.php']='17985';
 $versions['view_album.php']='17941';
 $versions['view_comments.php']='17933';
 $versions['view_photo.php']='17958';
