@@ -1,3 +1,7 @@
+2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b29
+
+ * Manifest updates etc.
+
 2008-09-16 Jens Tkotz <jens@peino.de> 1.5.9-svn-b28
 
  * SECURITY FIX: Arbitrary file disclosure
